--- a/module/Lukinview/webroot/css/Document.css
+++ b/module/Lukinview/webroot/css/Document.css
@@ -2,38 +2,39 @@ main.media-item {
 	display: flex;
 	flex-direction: column;
 }
-
 #media-item {
 	display: flex;
 	justify-content: center;
 	flex-grow: 1;
 }
-
 #media-item * {
 	max-width: 100%;
 }
-
-#media-item .image,
-#media-item .video,
-#media-item .audio {
-	padding-bottom: 5rem;
+#media-item .audio,
+#media-item .audio audio {
+	width: 100%;
 }
-
+#media-item .audio {
+	background-size: 100% 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 #media-item .image img {
 	max-height: 85vh;
 }
-
 #media-item .text {
 	width: 100%;
 	text-align: center;
 }
-
 #media-item .text object {
 	width: 99%;
 	height: 98%;
 	background-color: #ccc;
 }
-
 .text object {
 	color: #fff;
+}
+footer {
+	padding-top: 5rem;
 }
