--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -32,10 +32,15 @@
 }
 #media-grid div.text a {
 	text-decoration: underline;
-	margin: 1rem;
-	display: block;
+	display: flex;
+	align-items: center;
 	width: 100%;
-	height: 100%;
+	aspect-ratio: 1;
+}
+#media-grid div.text a > div {
+	width: 100%;
+	padding: 1rem .5rem;
+	text-align: center;
 }
 #media-grid div.text a:hover {
 	color: #fff;
