Show caption on audio files

--- a/module/Lukinview/webroot/css/Document.css
+++ b/module/Lukinview/webroot/css/Document.css
@@ -15,8 +15,16 @@ main.media-item {
 #media-item .audio {
 	background-size: 100% 100%;
 	display: flex;
-	align-items: end;
+	flex-direction: column;
 	justify-content: center;
+}
+#media-item .audio .caption {
+	background-color: rgba(0, 0, 0, .5);
+	padding: .25rem .5rem;
+}
+#media-item .audio .thumbnail {
+	background-size: 100% 100%;
+	flex-grow: 1;
 }
 #media-item .image img {
 	max-height: 85vh;
