--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -24,11 +24,18 @@
 }
 #media-grid div.audio {
 	display: flex;
-	align-items: end;
+	flex-direction: column;
 	background-color: #474747;
-	/* For waveform image */
-	background-size: 100% 100%;
 	aspect-ratio: 1;
+}
+#media-grid div.audio .caption {
+	background-color: rgba(0, 0, 0, .5);
+	padding: .25rem .5rem;
+}
+/* Waveform image */
+#media-grid div.audio .thumbnail {
+	background-size: 100% 100%;
+	flex-grow: 1;
 }
 #media-grid div.text a {
 	text-decoration: underline;
