--- a/module/Lukinview/webroot/css/Document.css
+++ b/module/Lukinview/webroot/css/Document.css
@@ -26,7 +26,8 @@ main.media-item {
 	background-size: 100% 100%;
 	flex-grow: 1;
 }
-#media-item .image img {
+#media-item .image img,
+#media-item .video video {
 	max-height: 85vh;
 	max-width: 100%;
 }
