--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -32,13 +32,19 @@
 	aspect-ratio: 1;
 }
 #media-grid div.audio .caption {
-	background-color: rgba(0, 0, 0, .5);
+	background-color: rgba(0, 0, 0, .6);
 	padding: .25rem .5rem;
+	/* `.caption` could be `a` or `div` */
+	display: block;
+	color: #ddd;
 }
 /* Waveform image */
 #media-grid div.audio .thumbnail {
 	background-size: 100% 100%;
 	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
 }
 #media-grid div.text a {
 	text-decoration: underline;
