--- a/module/Lukinview/webroot/css/Global.css
+++ b/module/Lukinview/webroot/css/Global.css
@@ -3,6 +3,10 @@ html {
 }
 body {
 	background: radial-gradient(circle, #424242 0%, #2d2d2d 100%);
+	font-family: sans-serif;
+}
+html, body {
+	margin: 0;
 }
 html, body, main {
 	height: 100%;
@@ -24,13 +28,6 @@ ul {
 }
 li {
 	margin-bottom: 0.75rem;
-}
-body {
-	margin: 0;
-	font-family: sans-serif;
-}
-body.modal-open {
-	overflow: hidden;
 }
 select, input {
 	padding: 0.75rem;
@@ -80,27 +77,9 @@ a.button {
 footer .about {
 	text-align: center;
 }
-.text-center {
-	text-align: center;
-}
-.input-grid {
-	display: grid;
-}
-.input-grid-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.gap {
-	gap: 0.75rem;
-}
-.border {
-	border: 2px solid #7f7f7f;
-}
 .full-page-center-text {
 	text-align: center;
 	margin-top: 48vh;
 	text-transform: lowercase;
 }
-#settings-form .input-grid > *:last-child:nth-child(2n-1) {
-	grid-column-end: -2;
-	transform: translateX(calc(-50% - 0.375rem));
-}
+
