--- a/module/Lukinview/webroot/css/Document.css
+++ b/module/Lukinview/webroot/css/Document.css
@@ -12,17 +12,21 @@ main.media-item {
 	padding: .25rem .5rem;
 	color: #ddd;
 }
-#media-item .audio .thumbnail {
-	background-size: 100% 100%;
-	aspect-ratio: 1;
+#media-item .audio {
 	display: flex;
 	flex-direction: column;
 	justify-content: end;
-	height: 75vh;
 	max-width: 100%;
+	aspect-ratio: 1;
+	background-color: #474747;
+	background-size: 100% 100%;
 }
 #media-item .audio audio {
 	width: 100%;
+	opacity: .85;
+}
+audio::-webkit-media-controls-enclosure {
+	border-radius: 0;
 }
 #media-item .image img,
 #media-item .video video {
