--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -25,26 +25,26 @@
 #media-grid audio {
 	width: 100%;
 }
-#media-grid div.audio {
+#media-grid .audio {
 	display: flex;
 	flex-direction: column;
+	justify-content: end;
 	background-color: #474747;
+	background-size: 100% 100%;
 	aspect-ratio: 1;
 }
-#media-grid div.audio .caption {
+#media-grid .audio .caption {
 	background-color: rgba(0, 0, 0, .6);
 	padding: .25rem .5rem;
 	/* `.caption` could be `a` or `div` */
 	display: block;
 	color: #ddd;
 }
-/* Waveform image */
-#media-grid div.audio .thumbnail {
-	background-size: 100% 100%;
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: end;
+#media-grid .audio audio {
+	opacity: .85;
+}
+audio::-webkit-media-controls-enclosure {
+	border-radius: 0;
 }
 #media-grid div.text a {
 	text-decoration: underline;
