--- a/module/Lukinview/webroot/css/Document.css
+++ b/module/Lukinview/webroot/css/Document.css
@@ -1,65 +1,3 @@
-main.media-item {
-	display: flex;
-	flex-direction: column;
-}
-#media-item .audio .caption {
-	background-color: rgba(0, 0, 0, .6);
-	padding: .25rem .5rem;
-	color: #ddd;
-	text-align: left;
-}
-#media-item .audio {
-	display: flex;
-	flex-direction: column;
-	justify-content: end;
-	max-width: 100%;
-	aspect-ratio: 1;
-	background-color: #474747;
-	background-size: 100% 100%;
-}
-#media-item .audio audio {
-	width: 100%;
-	opacity: .85;
-}
-audio::-webkit-media-controls-enclosure {
-	border-radius: 0;
-}
-#media-item .image a {
-	display: inline-block;
-}
-#media-item .image img,
-#media-item .video video {
-	max-height: 85vh;
-	max-width: 100%;
-}
-#media-item .text {
-	width: 100%;
-	text-align: center;
-}
-#media-item .text object {
-	width: 99%;
-	height: 98%;
-	background-color: #ccc;
-}
-.text object {
-	color: #fff;
-}
 footer {
-	padding-top: 5rem;
-}
-#media-item {
-	text-align: center;
-}
-#media-item .text object {
-	min-height: 75vh;
-}
-@media (min-width: 600px) {
-	#media-item {
-		display: flex;
-		justify-content: center;
-		flex-grow: 1;
-	}
-	#media-item .text object {
-		min-height: auto;
-	}
+	margin-top: 3rem;
 }
