--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -1,99 +1,35 @@
 #media-grid {
 	gap: 0;
+	grid-template-columns: repeat(2, minmax(0px, 1fr));
+	display: grid;
 }
-#media-grid.square a > div {
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-#media-grid.square img {
+#folder .folder-container {
 	aspect-ratio: 1;
-}
-#media-grid img {
-	width: 100%;
-}
-#media-grid div.video {
-	overflow: hidden;
-	aspect-ratio: 1;
-	display: flex;
-	justify-content: center;
-}
-#media-grid video {
-	background-color: rgba(0, 0, 0, .5);
-}
-#media-grid video,
-#media-grid audio {
-	width: 100%;
-}
-#media-grid .audio {
-	display: flex;
-	flex-direction: column;
-	justify-content: end;
-	background-color: #474747;
-	background-size: 100% 100%;
-	aspect-ratio: 1;
-}
-#media-grid .audio .caption {
-	background-color: rgba(0, 0, 0, .6);
-	padding: .25rem .5rem;
-	/* `.caption` could be `a` or `div` */
-	display: block;
-	color: #ddd;
-}
-#media-grid .audio audio {
-	opacity: .85;
-}
-audio::-webkit-media-controls-enclosure {
-	border-radius: 0;
-}
-#media-grid div.text a {
-	text-decoration: underline;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	aspect-ratio: 1;
-}
-#media-grid div.text a > div {
-	width: 100%;
-	padding: 1rem .5rem;
-	text-align: center;
-}
-#media-grid div.text a:hover {
-	color: #fff;
-}
-#media-grid div.folder {
+	box-sizing: border-box;
 	border: 1px solid rgba(255, 255, 255, 0.75);
 	padding: 0.5rem;
-	aspect-ratio: 1;
 }
-#media-grid div.folder:hover {
+#folder .folder-container:hover {
 	border: 2px solid rgba(255, 255, 255, 0.9);
 	font-size: 110%;
 }
-#media-grid div.folder a {
-	display: flex;
-	width: 100%;
+#folder .folder-container a {
 	height: 100%;
+	display: flex;
 	align-items: center;
 	color: #fff;
 	justify-content: center;
-	text-align: center;
 	font-weight: bold;
 	transition-property: font-size;
 	transition-duration: .15s;
 }
-#media-grid.grid {
-	grid-template-columns: repeat(2, minmax(0px, 1fr));
-	display: grid;
-	columns: unset;
-}
 @media screen and (min-width: 700px) {
-	#media-grid.grid {
+	#media-grid {
 		grid-template-columns: repeat(4, minmax(0px, 1fr));
 	}
 }
 @media screen and (min-width: 1100px) {
-	#media-grid.grid {
+	#media-grid {
 		grid-template-columns: repeat(6, minmax(0px, 1fr));
 	}
 }
