For audio, hide waveform elapsed indicator until clicked or sound starts

--- a/module/Monsi/webroot/css/MediaType/Audio.css
+++ b/module/Monsi/webroot/css/MediaType/Audio.css
@@ -43,6 +43,9 @@
 	transition-property: width;
 	transition-duration: .15s;
 }
+.audio-container .elapsed.hidden {
+	opacity: 0;
+}
 #media-grid .audio-container {
 	position: relative;
 	aspect-ratio: 1;
