--- a/module/Monsi/webroot/css/Folder.css
+++ b/module/Monsi/webroot/css/Folder.css
@@ -1,21 +1,21 @@
-#media-grid {
+#folder .grid {
 	gap: 0;
 	grid-template-columns: repeat(2, minmax(0px, 1fr));
 	display: grid;
 }
-#media-grid .folder-container {
+#folder .grid .folder-container {
 	aspect-ratio: 1;
 	box-sizing: border-box;
 	background: radial-gradient(circle, #424242 0%, #2d2d2d 100%);
 	border: 1px solid rgba(255, 255, 255, 0.75);
 	padding: 0.5rem;
 }
-#media-grid .folder-container:hover {
+#folder .grid .folder-container:hover {
 	background: radial-gradient(circle, #484848 0%, #2d2d2d 100%);
 	border-width: 2px;
 	font-size: 110%;
 }
-#media-grid .folder-container a {
+#folder .grid .folder-container a {
 	height: 100%;
 	display: flex;
 	align-items: center;
@@ -26,12 +26,12 @@
 	transition-duration: .15s;
 }
 @media screen and (min-width: 700px) {
-	#media-grid {
+	#folder .grid {
 		grid-template-columns: repeat(4, minmax(0px, 1fr));
 	}
 }
 @media screen and (min-width: 1100px) {
-	#media-grid {
+	#folder .grid {
 		grid-template-columns: repeat(6, minmax(0px, 1fr));
 	}
 }
