--- a/module/Monsi/webroot/css/MediaType/Video.css
+++ b/module/Monsi/webroot/css/MediaType/Video.css
@@ -14,13 +14,13 @@
 	width: 100%;
 	max-height: 85vh;
 }
-#media-grid .video-container .video-js {
+#folder .grid .video-container .video-js {
 	width: 100%;
 	height: 100%;
 }
-#media-grid .video-container {
+#folder .grid .video-container {
 	aspect-ratio: 1;
 }
-#media-grid video {
+#folder .grid video {
 	width: 100%;
 }
