- Updates to testing including bridge to PHP from JS tests
- Videos have captions, partly to get a link in there for the test to collect and follow

- `cache` folders are renamed to `.cache`

- Text media cache output is now separated into two different folders, `html` and `markdown`

--- a/module/Lukinview/webroot/css/Global.css
+++ b/module/Lukinview/webroot/css/Global.css
@@ -33,15 +33,15 @@ footer {
 	text-align: center;
 	padding-bottom: 1.5rem;
 }
-.app-bar {
+.app-bar nav {
 	display: flex;
 	align-items: center;
 	padding: 1rem;
 }
-.app-bar > div {
+.app-bar nav > div {
 	width: 100%;
 }
-.app-bar .index {
+.app-bar .parent {
 	flex: 1;
 	text-align: center;
 }
