--- a/module/Lukinview/webroot/css/MediaType/Video.css
+++ b/module/Lukinview/webroot/css/MediaType/Video.css
@@ -10,6 +10,9 @@
 .video-container video {
 	background-color: rgba(0, 0, 0, .5);
 }
+.video-container .caption {
+	display: none;
+}
 #folder .grid .video-container {
 	aspect-ratio: 1;
 }
