--- a/module/Monsi/webroot/css/MediaType/Video.css
+++ b/module/Monsi/webroot/css/MediaType/Video.css
@@ -1,3 +1,6 @@
+.video-container {
+	position: relative;
+}
 .video-container,
 .video-container video {
 	width: auto;
@@ -9,6 +12,30 @@
 }
 .video-container video {
 	background-color: rgba(0, 0, 0, .5);
+}
+.video-container .caption > * {
+	display: block;
+	padding: .25rem .5rem;
+}
+.video-container .caption {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 5;
+	opacity: .9;
+	transition-duration: .25s;
+	transition-property: opacity;
+	background-color: rgba(0, 0, 0, .6);
+	font-size: .9rem;
+	color: #ddd;
+	width: 100%;
+}
+.video-container.playing .caption,
+.video-container:hover .caption {
+	opacity: 0;
+}
+.video-container .caption:hover {
+	opacity: 1;
 }
 #media-item .video-container .video-js {
 	width: 100%;
