Update to how folders are displayed, simplify HTML

--- a/module/Lukinview/webroot/css/Folder.css
+++ b/module/Lukinview/webroot/css/Folder.css
@@ -17,7 +17,7 @@
 	border-width: 2px;
 	font-size: 110%;
 }
-#folder .grid .folder-container a {
+#folder .grid .folder-container {
 	color: #fff;
 	font-weight: bold;
 	transition-property: font-size;
