--- a/module/Lukinview/webroot/css/MediaItem.css
+++ b/module/Lukinview/webroot/css/MediaItem.css
@@ -1,3 +1,10 @@
+#media-item main {
+	animation: fadeIn .25s;
+}
+@keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+}
 footer {
 	margin-top: 3rem;
 }
